go-envoy/envoy1.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: http_proxy
                route_config:
                  name: all
                  virtual_hosts:
                    - name: backend_cluster
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/admin"
                          direct_response:
                            status: 403
                            body:
                              inline_string: "forbidden, yo"
                        - match:
                            prefix: "/app1"
                          route:
                            cluster: app1_cluster
                        - match:
                            prefix: "/app2"
                          route:
                            cluster: app2_cluster
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend_cluster
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: backend_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 1111
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 2222
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 3333
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 4444
    - name: app1_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: app1_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 1111
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 2222
    - name: app2_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: app2_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 3333
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 4444
